<resources>
    <string name="app_name">MoneyPal</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="prompt_sender">Sender</string>
    <string name="prompt_receiver">Receiver</string>
    <string name="prompt_amount">Amount</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="transfer">Transfer</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_amount">Amount</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_friend_list">Friends</string>
    <string name="title_friend_detail">Friend Detail</string>
    <string name="title_dostar_list">Friends</string>
    <string name="title_dostar_detail">Friend Detail</string>
    <string name="title_activity_profile">Your Profile</string>
    <string name="title_activity_bank_details">Your Bank Details</string>
    <string name="title_activity_add_friend">Add Friend</string>

    <string name="message_notification_title_template">Message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
