<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_send_money"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.MoneyPal.Activity.SendMoneyActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/sender_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


                <TextView
                    android:text="Sender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_sender"
                    android:textSize="25sp"
                    android:layout_weight="0.3" />

                <AutoCompleteTextView
                    android:id="@+id/sender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_sender"
                    android:inputType="text|textAutoComplete"
                    android:maxLines="1"
                    android:textSize="25sp"
                    android:singleLine="true"
                    android:layout_weight="0.7"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/receiver_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
            <TextView
                android:text="Receiver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView_receiver"
                android:textSize="25sp"
                android:layout_weight="0.3" />

                <AutoCompleteTextView
                    android:id="@+id/receiver"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_receiver"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="Receiver"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text|textAutoComplete"
                    android:maxLines="1"
                    android:textSize="25sp"
                    android:layout_weight="0.7"

                    android:singleLine="true" />



            </LinearLayout>
            <!--android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_receiver"
                    android:maxLines="1"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />
            </android.support.design.widget.TextInputLayout-->

            <LinearLayout
                android:id="@+id/amount_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:text="Amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_amount"
                    android:textSize="25sp"
                    android:layout_weight="0.3" />
            <EditText
                android:id="@+id/amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/action_amount"
                android:imeOptions="actionUnspecified"
                android:hint="@string/prompt_amount"
                android:inputType="numberDecimal"
                android:layout_weight="0.7"
                android:textSize="25sp"
                android:ems="10" />
            </LinearLayout>

            <CheckBox
                android:text="Transfer Now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/transfer_now"
                android:checked="true"
                android:onClick="onTransferNowChanged"/>

            <Button
                android:id="@+id/transfer_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/transfer"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
